--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="title_activity_book_city">BookCityActivity</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_base">BaseActivity</string>
+    <string name="title_activity_play_detail">PlayDetailActivity</string>
 
 </resources>
