--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">ListenBook</string>
+    <string name="app_name">书城听书</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_main">MainActivity</string>
-    <string name="title_activity_book_city">BookCityActivity</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_book_city">BookCityActivity</string>
     <string name="title_activity_base">BaseActivity</string>
     <string name="title_activity_play_detail">PlayDetailActivity</string>
 
